log
Wed 20 Mar 2024 08:27:16 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|4
total_score: 10/70
a37255c
Wed 20 Mar 2024 08:31:46 PM UTC: 
 exercises.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
5f56c4e
Wed 20 Mar 2024 08:33:26 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|4
total_score: 10/70
dc098b9
Wed 20 Mar 2024 08:37:57 PM UTC: 
 exercises.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  0|0
df6f1c3
Wed 20 Mar 2024 08:43:22 PM UTC: 
 exercises.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  2|3
total_score: 20/70
bb4b4f6
Wed 20 Mar 2024 08:46:56 PM UTC: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  3|2
total_score: 40/70
7392258
Wed 20 Mar 2024 08:55:41 PM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  3|2
total_score: 40/70
6ac1a34
Wed 20 Mar 2024 09:04:31 PM UTC: 
 exercises.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|1
total_score: 50/70
36df709
Sat 23 Mar 2024 12:34:38 PM UTC: 
 exercises.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:119:11: error: unused variable ‘P’ [-Werror=unused-variable]
  119 |    Stack* P = create_stack();
      |           ^
exercises.c:135:1: error: control reaches end of non-void function [-Werror=return-type]
  135 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
620ecb2
